@@ -29,3 +29,6 @@ DirectWrite
 DirectInput
 	* Fixed a typo in Device.GetObjectInfoById that caused it to return info by usage instead.
 	* Changed ObjectProperties.LogicalRange and ObjectProperties.PhysicalRange to return actual ranges instead of integers.
+
+Windows
+	* Added functionality to the RenderForm class to add sizing and monitor change events.
